Added some front end

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,21 @@
 <% provide(:title, 'Register') %>
 <%= form_for @user do |f| %>
     <%= f.label 'Username' %>
+    <p id="hint"></p>
     <%= f.text_field :username %>
     <%= f.label 'Email' %>
     <%= f.email_field :email %>
     <%= f.submit 'Submit' %>
 <% end %>
+
+<script>
+//    var usrInput = document.getElementById("user_username");
+//    usrInput.onchange = function () {
+//        if (usrInput.value.length < 4 || usrInput.value.length > 20) {
+//            document.getElementById("hint").innerHTML = "ТЫ БЛЯТЬ ЮЗЕР КРИВОРУКИЙ СУКА";
+//        }
+//        else {
+//            document.getElementById("hint").innerHTML = "";
+//        }
+//    }
+</script>
