Added interface of authentification

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,10 @@
 <% provide(:title, 'Home') %>
 <h1>Landing page</h1>
+<div id="info">
+  <% if logged_in? %>
+    <h1>You are logged in.</h1>
+  <% else %>
+    <h1>You are not logged in.</h1>
+  <% end %>
+</div>
 <%= render @users %>
