--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,10 @@
 <nav>
   <ul>
-    <li><%= link_to 'Register', signup_path %></li>
+    <% if logged_in? %>
+        <li><%= link_to 'Log out', logout_path, method: :delete %></li>
+    <% else %>
+        <li><%= link_to 'Register', signup_path %></li>
+        <li><%= link_to 'Login', login_path %></li>
+    <% end %>
   </ul>
 </nav>
