--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,5 +3,13 @@
 <% if @current_user.is_friend? @user %>
     <p>This user is a friend of you.</p>
 <% else %>
-    <%=  %>
+    <% if FriendRequest.requested? @current_user, @user %>
+        <p>You have already sent frienship request.</p>
+    <% else %>
+        <%= form_for FriendRequest.new do |f| %>
+            <%= hidden_field_tag :from_id, @current_user.id %>
+            <%= hidden_field_tag :to_id, @user.id %>
+            <%= f.submit 'Add friend' %>
+        <% end %>
+    <% end %>
 <% end %>
