--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,7 @@
 <nav>
   <ul>
     <% if logged_in? %>
+        <li><%= link_to 'Profile', profile_path %></li>
         <li><%= link_to 'Log out', logout_path, method: :delete %></li>
     <% else %>
         <li><%= link_to 'Register', signup_path %></li>
