--- a/app/views/static_pages/profile.html.erb
+++ b/app/views/static_pages/profile.html.erb
@@ -1,6 +1,34 @@
 <h1>Name: <%= @current_user.username %></h1>
 <h2>Email: <%= @current_user.email %></h2>
-<h1>Friend requests</h1>
 <% if @current_user.friend_requests.any? %>
+    <h1>Friend requests</h1>
     <%= render @current_user.friend_requests %>
 <% end %>
+<% if @current_user.friends.any? %>
+    <h1>Friends</h1>
+    <%= render current_user.friends %>
+<% end %>
+<h1>The wall</h1>
+<div id="wall"><%= render current_user.feed %></div>
+
+  <h1>Post</h1>
+  <%= form_for Post.new, remote: true do |f| %>
+      <%= hidden_field :user, :id %>
+      <%= hidden_field :current_user, :id %>
+      <%= f.label 'Content' %>
+      <%= f.text_area :content %>
+      <%= f.submit 'Post' %>
+  <% end %>
+
+  <%= subscribe_to "/wall/#{@user.id}" %>
+  <script>
+      PrivatePub.subscribe('/wall/<%= @user.id %>', function (data, channel) {
+          $('#wall').prepend(formInput(data));
+      });
+      function formInput(data) {
+          var output = '<h3>From: ' + data.post.from + '</h3>';
+          output += '<p>' + data.post.content + '</p>';
+          output += '<hr>';
+          return output
+      }
+  </script>
