--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
 <% end %>
 <h1>The Wall</h1>
 <h6>We don't need no education...</h6>
-<div id="wall"><%= render @user.feed %></div>
+<div id="wall"><%= render @user.wall %></div>
 <h1>Post</h1>
 <%= form_for Post.new, remote: true do |f| %>
     <%= hidden_field :user, :id %>
