--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
-<nav>
-  <ul>
+<nav class="navbar navbar-inverse">
+  <ul class="nav navbar-nav">
     <% if logged_in? %>
         <li><%= link_to 'Home', root_path %></li>
         <li><%= link_to 'Profile', profile_path %></li>
