--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,8 +7,10 @@
     <%= hidden_field :user, :id %>
     <%= hidden_field :current_user, :id %>
     <%= f.label 'Content' %>
-    <%= f.text_area :content %>
-    <%= f.submit 'Post' %>
+    <%= f.text_area :content, class: 'form-control' %>
+    <br>
+    <%= f.submit 'Post', class: 'btn btn-primary' %>
+    <br>
 <% end %>
 
 <%= subscribe_to "/wall/#{@user.id}" %>
