--- a/app/views/friend_requests/_friend_request.html.erb
+++ b/app/views/friend_requests/_friend_request.html.erb
@@ -1,15 +1,17 @@
-<div id="request">
-  <ul>
-    <li>From: <%= friend_request.from.username %></li>
-    <li>Email: <%= friend_request.from.email %></li>
+<div class="request">
+  <ul class="list-unstyled">
+    <li>
+      From: <%= friend_request.from.username %>
+      Email: <%= friend_request.from.email %>
+
+      <%= form_for(:friend_request, url: friend_request_path(friend_request.id), method: :patch) do |f| %>
+          <%= hidden_field_tag :from_id, friend_request.from.id %>
+          <%= hidden_field_tag :to_id, friend_request.to.id %>
+          <%= f.label 'Accept' %>
+          <%= f.radio_button 'choice', 'accept', checked: true %>
+          <%= f.label 'Deny' %>
+          <%= f.radio_button 'choice', 'deny' %>
+          <%= f.submit 'Submit', class: 'btn btn-primary' %>
+      <% end %></li>
   </ul>
-  <%= form_for(:friend_request, url: friend_request_path(friend_request.id), method: :patch) do |f| %>
-      <%= hidden_field_tag :from_id, friend_request.from.id %>
-      <%= hidden_field_tag :to_id, friend_request.to.id %>
-      <%= f.label 'Accept' %>
-      <%= f.radio_button 'choice', 'accept', checked: true %>
-      <%= f.label 'Deny' %>
-      <%= f.radio_button 'choice', 'deny' %>
-      <%= f.submit 'Submit' %>
-  <% end %>
 </div>
