--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 <div class="post"><p><strong><%= post.from.username %></strong></p>
 <p><%= post.content %></p>
 <% if post.from_id == @current_user.id || post.to_id == current_user.id %>
-    <%= link_to 'Delete', post_path(post, user: @current_user.id), method: :delete %>
+    <%= link_to 'Delete', post_path(post, user: @current_user.id), method: :delete, class: 'btn btn-danger' %>
 <% end %>
 <hr></div>
