--- a/app/views/dialogs/_dialog.html.erb
+++ b/app/views/dialogs/_dialog.html.erb
@@ -1,3 +1,3 @@
-<div id="dialog-<%= dialog.id %>">
+<div id="dialog-<%= dialog.id %>" class="dialog">
   <%= link_to dialog.name, dialog_path(dialog.id) %>
 </div>
