--- a/app/views/dialogs/show.html.erb
+++ b/app/views/dialogs/show.html.erb
@@ -2,7 +2,7 @@
 <% unless @dialog.members.count < 3 %>
     <%= link_to 'Quit dialog', quit_dialog_path(user_id: current_user.id, dialog_id: @dialog.id), method: :post %>
 <% end %>
-<table id="chat">
+<table id="chat" class="table">
   <%= render @dialog.messages %>
 </table>
 
