--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-default">
   <ul class="nav navbar-nav">
     <% if logged_in? %>
         <li><%= link_to 'Home', root_path %></li>
