--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,14 @@
   <title><%= full_title(yield(:title)) %></title>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= csrf_meta_tags %>
 </head>
 <body>
 
 <%= render 'layouts/header' %>
 
-<div class="container"><%= render 'layouts/flash' %><%= yield %></div>
+<div class="container"><div class="row"><div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><%= render 'layouts/flash' %></div><%= yield %></div></div>
 
 </body>
 </html>
