--- a/app/views/dialogs/new.html.erb
+++ b/app/views/dialogs/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'New Dialog') %>
 <h1>Create dialog</h1>
 <%= form_for :dialog, url: dialogs_path do |f| %>
     <%= hidden_field_tag(:multi, true) %>
