--- a/app/views/dialogs/show.html.erb
+++ b/app/views/dialogs/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Dialog #{@dialog.name}") %>
 <h1><%= @dialog.name %></h1>
 <% unless @dialog.members.count < 3 %>
     <%= link_to 'Quit dialog', quit_dialog_path(user_id: current_user.id, dialog_id: @dialog.id), method: :post %>
