--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "#{@user.username}'s profile") %>
 <h1><%= @user.username %></h1>
 <h2><%= @user.email %></h2>
 <% unless @current_user.has_dialog_with(@user) %>
