--- a/app/views/layouts/_notifications.html.erb
+++ b/app/views/layouts/_notifications.html.erb
@@ -1,2 +1,5 @@
-<% if current_user.notifications.any? %>
+<% unless current_user.nil? %>
+    <% if current_user.notifications.any? %>
+        <div class="alert alert-info"><%= sanitize message %></div>
+    <% end %>
 <% end %>
