--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,14 @@
-<div class="post"><p><strong><%= post.from.username %></strong></p>
-<p><%= post.content %></p>
-<% if post.from_id == @current_user.id || post.to_id == current_user.id %>
-    <%= link_to 'Delete', post_path(post, user: @current_user.id), method: :delete, class: 'btn btn-danger' %>
-<% end %>
-<hr></div>
+<div class="post" id="post-<%= post.id %>"><p><strong><%= post.from.username %></strong></p>
+
+  <p><%= post.content %></p>
+  <% if post.from_id == @current_user.id || post.to_id == current_user.id %>
+      <%= link_to 'Delete', post_path(post, user: @current_user.id), method: :delete, class: 'btn btn-danger' %>
+  <% end %>
+  <p>Likes: <%= post.likes.count %></p>
+  <% if !post.liked?(current_user) %>
+    <%= link_to 'Like', likes_path(from_id: current_user.id, to_id: post.id), method: :post, remote: true %>
+  <% else %>
+      <%= link_to 'Unlike', unlike_path(from_id: current_user.id, to_id: post.id), method: :delete, remote: true %>
+  <% end %>
+  <hr>
+</div>
