Finished dialogs and posts

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -27,4 +27,9 @@
         var ouput;
         return ouput = "<div class=\"post\"><p><strong>" + data.post.from + "</strong></p><p>" + data.post.content + "</p><hr></div>";
     };
+    $('#post_content').keypress(function (e) {
+        if (e.which === 13) {
+            return $('#new_post').submit();
+        }
+    });
 </script>
