--- a/app/views/static_pages/profile.html.erb
+++ b/app/views/static_pages/profile.html.erb
@@ -1,27 +1,30 @@
 <% provide(:title, "Profile") %>
-<h1>Name: <%= @current_user.username %></h1>
-<h2>Email: <%= @current_user.email %></h2>
-<% if @current_user.friend_requests.any? %>
-    <h1>Friend requests</h1>
-    <%= render @current_user.friend_requests %>
-<% end %>
+<div class="row">
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><h1>Name: <%= @current_user.username %></h1>
+
+    <h2>Email: <%= @current_user.email %></h2>
+    <% if @current_user.friend_requests.any? %>
+        <h1>Friend requests</h1>
+        <%= render @current_user.friend_requests %>
+    <% end %></div>
+</div>
 <% if @current_user.friends.any? %>
-    <h1>Friends</h1>
-    <%= render current_user.friends %>
+    <div class="row">
+      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"><h1>Friends</h1>
+        <%= render current_user.friends %></div>
 <% end %>
-<h1>The wall</h1>
-<div id="wall"><%= render current_user.wall %></div>
+<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9"><h1>The wall</h1>
 
-<h1>Post</h1>
-<%= form_for Post.new, remote: true do |f| %>
-    <%= hidden_field :user, :id %>
-    <%= hidden_field :current_user, :id %>
-    <%= f.label 'Content' %>
-    <%= f.text_area :content, class: 'form-control' %>
-    <br>
-    <%= f.submit 'Post', class: 'btn btn-primary' %>
-<% end %>
-
+  <div id="wall"><%= render current_user.wall %></div>
+  <h1>Post</h1>
+  <%= form_for Post.new, remote: true do |f| %>
+      <%= hidden_field :user, :id %>
+      <%= hidden_field :current_user, :id %>
+      <%= f.label 'Content' %>
+      <%= f.text_area :content, class: 'form-control' %>
+      <br>
+      <%= f.submit 'Post', class: 'btn btn-primary' %>
+  <% end %></div></div>
 <%= subscribe_to "/wall/#{@user.id}" %>
 <script>
     PrivatePub.subscribe('/wall/<%= @user.id %>', function (data, channel) {
