--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,40 +1,47 @@
 <% provide(:title, "#{@user.username}'s profile") %>
-<h1><%= @user.username %></h1>
-<h2><%= @user.email %></h2>
-<% unless @current_user.has_dialog_with(@user) %>
-    <%= link_to 'Send message', dialogs_path(from: @current_user.id, to: @user.id), method: :post %>
-<% end %>
-<% if @current_user.is_friend? @user %>
-    <p>This user is a friend of you.</p>
-<% else %>
-    <% if FriendRequest.requested? @current_user, @user %>
-        <p>You have already sent frienship request.</p>
-    <% else %>
-        <%= form_for FriendRequest.new do |f| %>
-            <%= hidden_field_tag :from_id, @current_user.id %>
-            <%= hidden_field_tag :to_id, @user.id %>
-            <%= f.submit 'Add friend', class: 'btn btn-primary' %>
-        <% end %>
+<div class="row">
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><h1><%= @user.username %></h1>
+
+    <h2><%= @user.email %></h2>
+    <% unless @current_user.has_dialog_with(@user) %>
+        <%= link_to 'Send message', dialogs_path(from: @current_user.id, to: @user.id), method: :post %>
     <% end %>
-<% end %>
-<% if @user.friends.any? %>
-    <h1>Friends</h1>
-    <%= render @user.friends %>
-<% else %>
-    <h1>This user has no friends.</h1>
-<% end %>
-<h1>The Wall</h1>
-<h6>We don't need no education...</h6>
-<div id="wall"><%= render @user.wall %></div>
-<h1>Post</h1>
-<%= form_for Post.new, remote: true do |f| %>
-    <%= hidden_field :user, :id %>
-    <%= hidden_field :current_user, :id %>
-    <%= f.label 'Content' %>
-    <%= f.text_area :content, class: 'form-control' %>
-    <br>
-    <%= f.submit 'Post', class: 'btn btn-primary' %>
-<% end %>
+    <% if @current_user.is_friend? @user %>
+        <p>This user is a friend of you.</p>
+    <% else %>
+        <% if FriendRequest.requested? @current_user, @user %>
+            <p>You have already sent frienship request.</p>
+        <% else %>
+            <%= form_for FriendRequest.new do |f| %>
+                <%= hidden_field_tag :from_id, @current_user.id %>
+                <%= hidden_field_tag :to_id, @user.id %>
+                <%= f.submit 'Add friend', class: 'btn btn-primary' %>
+            <% end %>
+        <% end %>
+    <% end %></div>
+</div>
+<div class="row">
+  <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+    <% if @user.friends.any? %>
+        <h1>Friends</h1>
+        <%= render @user.friends %>
+    <% else %>
+        <h1>This user has no friends.</h1>
+    <% end %></div>
+  <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9"><h1>The Wall</h1>
+    <h6>We don't need no education...</h6>
+
+    <div id="wall"><%= render @user.wall %></div>
+    <h1>Post</h1>
+    <%= form_for Post.new, remote: true do |f| %>
+        <%= hidden_field :user, :id %>
+        <%= hidden_field :current_user, :id %>
+        <%= f.label 'Content' %>
+        <%= f.text_area :content, class: 'form-control' %>
+        <br>
+        <%= f.submit 'Post', class: 'btn btn-primary' %>
+    <% end %></div>
+</div>
 
 <%= subscribe_to "/wall/#{@user.id}" %>
 <script>
