--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
 
 <%= render 'layouts/header' %>
 <%= render 'layouts/notifications' %>
-<div class="container"><div class="row"><div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><%= render 'layouts/flash' %></div><%= yield %></div></div>
+<div class="container">
+  <%= render 'layouts/flash' %><%= yield %></div>
 
 </body>
 </html>
