--- a/app/views/dialogs/_dialog.html.erb
+++ b/app/views/dialogs/_dialog.html.erb
@@ -1,3 +1,25 @@
-<div id="dialog-<%= dialog.id %>" class="dialog">
-  <%= link_to dialog.name, dialog_path(dialog.id) %>
+<h1 class="dialog_header"><%= dialog.name %></h1>
+<% unless dialog.members.count < 3 %>
+    <%= link_to 'Quit dialog', quit_dialog_path(user_id: current_user.id, dialog_id: dialog.id), method: :post %>
+<% end %>
+<div id="chat-scroll"><table id="chat" class="table">
+  <%= render dialog.messages %>
+</table></div>
+<%= subscribe_to "/dialogs/#{dialog.id}" %>
+<div id="message-form">
+  <%= render 'layouts/message_form' %>
 </div>
+<script>
+    PrivatePub.subscribe('/dialogs/<%= dialog.id %>', function (data, channel) {
+        $('#chat').append(formInput(data));
+    });
+    function formInput(data) {
+        var output = '<tr><td>' + data.message.from + '</td><td>' + data.message.content + '</td></tr>';
+        return output
+    }
+    $('#message_content').keypress(function (e) {
+        if (e.which === 13) {
+            return $('#new_message').submit();
+        }
+    });
+</script>
