Maded some javascript

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,4 @@
-<div id="user-<%= user.id %>">
+<div id="user-<%= user.id %>" class="user-tile">
   <ul class="list-unstyled"><li>
   <%= link_to user.username, user %><br>
   <%= user.email %>
