--- a/app/views/static_pages/profile.html.erb
+++ b/app/views/static_pages/profile.html.erb
@@ -3,6 +3,7 @@
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><h1>Name: <%= @current_user.username %></h1>
     <%= link_to 'Edit profile', edit_user_path(current_user) %>
     <h2>Email: <%= @current_user.email %></h2>
+    <%= image_tag current_user.avatar.url, class: 'img-responsive img-thumbnail' if current_user.avatar? %>
     <% if @current_user.friend_requests.any? %>
         <h1>Friend requests</h1>
         <%= render @current_user.friend_requests %>
