--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,16 @@
     <%= f.label 'Username' %>
     <%= f.text_field :username, class: 'form-control' %>
     <%= f.label 'Avatar' %>
-    <%= f.file_field :avatar, class: 'form-control' %>
+    <%= f.file_field :avatar, accept: 'image/jpeg,image/gif,image/png' %>
     <br>
     <%= f.submit 'Submit', class: 'btn btn-primary' %>
 <% end %>
+
+<script type="text/javascript">
+    $('#micropost_picture').bind('change', function () {
+        var size_in_megabytes = this.files[0].size / 1024 / 1024;
+        if (size_in_megabytes > 5) {
+            alert('Maximum file size is 5MB. Please choose a smaller file.');
+        }
+    });
+</script>
