--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,16 +4,7 @@
 <h1>The Wall</h1>
 
 <div id="wall"><%= render @current_user.feed %></div>
-<h1>Post</h1>
-<%= form_for Post.new, remote: true do |f| %>
-    <%= hidden_field :user, :id %>
-    <%= hidden_field :current_user, :id %>
-    <%= f.label 'Content' %>
-    <%= f.text_area :content, class: 'form-control' %>
-    <br>
-    <%= f.submit 'Post', class: 'btn btn-primary' %>
-    <br>
-<% end %>
+<%= render 'shared/post_form' %>
 
 
 <%= subscribe_to "/wall/#{@user.id}" %>
@@ -21,11 +12,13 @@
     PrivatePub.subscribe('/wall/<%= @user.id %>', function (data, channel) {
         $('#wall').prepend(form_input(data));
     });
+
+
     var form_input;
 
     form_input = function (data) {
-        var ouput;
-        return ouput = "<div class=\"post\"><p><strong>" + data.post.from + "</strong></p><p>" + data.post.content + "</p><hr></div>";
+        var output;
+        return output = "<div class=\"post\"><p><strong>" + data.post.from + "</strong></p><p>" + data.post.content + "</p><img src=\"" + data.post.image + "\" class=\"img-responsive img-thumbnail\" /><hr></div>";
     };
     $('#post_content').keypress(function (e) {
         if (e.which === 13) {
