--- a/app/views/static_pages/profile.html.erb
+++ b/app/views/static_pages/profile.html.erb
@@ -17,26 +17,16 @@
 <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9"><h1>The wall</h1>
 
   <div id="wall"><%= render current_user.wall %></div>
-  <h1>Post</h1>
-  <%= form_for Post.new, remote: true do |f| %>
-      <%= hidden_field :user, :id %>
-      <%= hidden_field :current_user, :id %>
-      <%= f.label 'Content' %>
-      <%= f.text_area :content, class: 'form-control' %>
-      <br>
-      <%= f.submit 'Post', class: 'btn btn-primary' %>
-  <% end %></div></div>
+  <%= render 'shared/post_form' %></div></div>
 <%= subscribe_to "/wall/#{@user.id}" %>
 <script>
     PrivatePub.subscribe('/wall/<%= @user.id %>', function (data, channel) {
         $('#wall').prepend(formInput(data));
     });
-    function formInput(data) {
-        var output = '<h3>From: ' + data.post.from + '</h3>';
-        output += '<p>' + data.post.content + '</p>';
-        output += '<hr>';
-        return output
-    }
+    form_input = function(data) {
+        var output;
+        return output = "<div class=\"post\"><p><strong>" + data.post.from + "</strong></p><p>" + data.post.content + "</p><img src=\"" + data.post.image + "\" class=\"img-responsive img-thumbnail\" /><hr></div>";
+    };
     $('#post_content').keypress(function (e) {
         if (e.which === 13) {
             return $('#new_post').submit();
