--- a/app/views/shared/_post_form.html.erb
+++ b/app/views/shared/_post_form.html.erb
@@ -1,11 +1,21 @@
 <h1>Post</h1>
-<%= form_for Post.new, html: {multipart: true} do |f| %>
+<%= form_for Post.new, html: { multipart: true } do |f| %>
     <%= hidden_field :user, :id %>
     <%= hidden_field :current_user, :id %>
     <%= f.label 'Content' %>
     <%= f.text_area :content, class: 'form-control' %>
     <%= f.label 'Image' %>
-    <%= f.file_field :image %>
+    <%= f.file_field :image, accept: 'image/jpeg,image/gif,image/png' %>
     <br>
     <%= f.submit 'Post', class: 'btn btn-primary' %>
 <% end %>
+
+
+<script type="text/javascript">
+    $('#post_image').bind('change', function () {
+        var size_in_megabytes = this.files[0].size / 1024 / 1024;
+        if (size_in_megabytes > 5) {
+            alert('Maximum file size is 5MB. Please choose a smaller file.');
+        }
+    });
+</script>
