--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,6 @@
+<% provide :title, 'Edit User' %>
 <h1>Edit user</h1>
-<%= form_for(@user) do |f| %>
+<%= form_for(@user, html: { multipart: true }) do |f| %>
     <%= f.label 'Username' %>
     <%= f.text_field :username, class: 'form-control' %>
     <%= f.label 'Avatar' %>
@@ -9,7 +10,7 @@
 <% end %>
 
 <script type="text/javascript">
-    $('#micropost_picture').bind('change', function () {
+    $('#user_avatar').bind('change', function () {
         var size_in_megabytes = this.files[0].size / 1024 / 1024;
         if (size_in_megabytes > 5) {
             alert('Maximum file size is 5MB. Please choose a smaller file.');
