--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
 <% provide(:title, 'Register') %>
-<%= form_for @user do |f| %>
+<%= form_for @user, html: {multipart: true} do |f| %>
     <%= f.label 'Username' %>
     <span id="hint"></span>
-    <%= f.text_field :username, class: 'form-control'  %>
+    <%= f.text_field :username, class: 'form-control' %>
     <%= f.label 'Email' %>
     <%= f.email_field :email, class: 'form-control' %>
     <%= f.label 'Password' %>
@@ -10,7 +10,17 @@
     <%= f.label 'Password confirmation' %>
     <%= f.password_field :password_confirmation, class: 'form-control' %>
     <%= f.label 'Avatar' %>
-    <%= f.file_field :avatar %>
+    <%= f.file_field :avatar, accept: 'image/jpeg,image/gif,image/png' %>
     <br>
     <%= f.submit 'Submit', class: 'btn btn-primary' %>
 <% end %>
+
+
+<script type="text/javascript">
+    $('#user_avatar').bind('change', function () {
+        var size_in_megabytes = this.files[0].size / 1024 / 1024;
+        if (size_in_megabytes > 5) {
+            alert('Maximum file size is 5MB. Please choose a smaller file.');
+        }
+    });
+</script>
