--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -38,7 +38,7 @@ tr > td {
   margin-bottom: 10px;
 }
 
-//.img-responsive {
-//  display: block;
-//  margin: 0 auto;
-//}
+.post_image {
+  display: block;
+  margin: 5px auto 5px auto;
+}
