--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,10 +3,10 @@
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><h1>All users</h1></div>
 </div>
 <div class="row">
-  <% @users.each do |u| %>
-      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"><%= render u %></div>
-  <% end %>
+  <%= render @users %>
 </div>
+
+<%= will_paginate @users %>
 
 <script>
     var max, maximum;
