--- a/app/views/static_pages/profile.html.erb
+++ b/app/views/static_pages/profile.html.erb
@@ -12,7 +12,14 @@
 <% if @current_user.friends.any? %>
     <div class="row">
       <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"><h1>Friends</h1>
-        <%= render current_user.friends %></div>
+        <% @user.friends.each do |friend| %>
+            <ul class="list-unstyled">
+              <li><%= link_to friend.username, friend %></li>
+              <li><%= friend.email %></li>
+              <li><%= image_tag friend.avatar.url, class: 'img-responsive img-thumbnail' if friend.avatar? %></li>
+            </ul>
+
+        <% end %></div>
 <% end %>
 <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9"><h1>The wall</h1>
 
@@ -23,7 +30,7 @@
     PrivatePub.subscribe('/wall/<%= @user.id %>', function (data, channel) {
         $('#wall').prepend(formInput(data));
     });
-    form_input = function(data) {
+    form_input = function (data) {
         var output;
         return output = "<div class=\"post\"><p><strong>" + data.post.from + "</strong></p><p>" + data.post.content + "</p><img src=\"" + data.post.image + "\" class=\"img-responsive img-thumbnail post_image\" /><hr></div>";
     };
