--- a/app/views/static_pages/profile.html.erb
+++ b/app/views/static_pages/profile.html.erb
@@ -23,7 +23,8 @@
 <% end %>
 <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9"><h1>The wall</h1>
 
-  <div id="wall"><%= render current_user.wall %></div>
+  <div id="wall"><%= render @feed %></div>
+  <%= will_paginate @feed %>
   <%= render 'shared/post_form' %></div></div>
 <%= subscribe_to "/wall/#{@user.id}" %>
 <script>
