--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
     <% if @current_user.is_friend?(@user) %>
         <%= form_for :friend, url: remove_friend_path do |f| %>
             <%= hidden_field_tag :one, @current_user.id %>
-            <%= hidden_field_tag :two, user.id %>
+            <%= hidden_field_tag :two, @user.id %>
             <%= f.submit 'Remove friend', class: 'btn btn-danger' %>
         <% end %>
     <% end %>
@@ -44,7 +44,8 @@
   <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9"><h1>The Wall</h1>
     <h6>We don't need no education...</h6>
 
-    <div id="wall"><%= render @user.wall %></div>
+    <div id="wall"><%= render @feed %></div>
+    <%= will_paginate @feed %>
     <%= render 'shared/post_form' %></div>
 </div>
 
