--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
         <li><%= link_to 'Profile', profile_path %></li>
         <li><%= link_to 'Users', users_path %></li>
         <li><%= link_to 'Dialogs', dialogs_user_path(@current_user) %></li>
+        <li><%= link_to 'Search', search_path %></li>
         <li><%= link_to 'Log out', logout_path, method: :delete %></li>
     <% else %>
         <li><%= link_to 'Register', signup_path %></li>
