--- a/app/views/static_pages/profile.html.erb
+++ b/app/views/static_pages/profile.html.erb
@@ -1,8 +1,9 @@
 <% provide(:title, "Profile") %>
 <div class="row">
-  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><h1>Name: <%= @current_user.username %></h1>
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><h1>Name: <%= render 'shared/full_name', user: current_user %></h1>
     <%= link_to 'Edit profile', edit_user_path(current_user) %>
     <h2>Email: <%= @current_user.email %></h2>
+    <%= render 'shared/info', user: current_user %>
     <%= image_tag current_user.avatar.url, class: 'img-responsive img-thumbnail' if current_user.avatar? %>
     <% if @current_user.friend_requests.any? %>
         <h1>Friend requests</h1>
@@ -12,14 +13,9 @@
 <% if @current_user.friends.any? %>
     <div class="row">
       <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"><h1>Friends</h1>
-        <% @user.friends.each do |friend| %>
-            <ul class="list-unstyled">
-              <li><%= link_to friend.username, friend %></li>
-              <li><%= friend.email %></li>
-              <li><%= image_tag friend.avatar.url, class: 'img-responsive img-thumbnail' if friend.avatar? %></li>
-            </ul>
+        <%= render 'shared/friend_list' %>
 
-        <% end %></div>
+        </div>
 <% end %>
 <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9"><h1>The wall</h1>
 
