--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "#{@user.username}'s profile") %>
 <div class="row">
-  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><h1><%= @user.username %></h1>
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><h1><%= render 'shared/full_name', user: @user %></h1>
 
     <h2><%= @user.email %></h2>
     <%= image_tag @user.avatar.url, class: 'img-responsive img-thumbnail' if @user.avatar? %>
@@ -32,12 +32,7 @@
   <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
     <% if @user.friends.any? %>
         <h1>Friends</h1>
-        <% @user.friends.each do |friend| %>
-            <ul class="list-unstyled"><li><%= link_to friend.username, friend %></li>
-            <li><%= friend.email %></li>
-            <li><%= image_tag friend.avatar.url, class: 'img-responsive img-thumbnail' if friend.avatar? %></li></ul>
-
-        <% end %>
+        <%= render 'shared/friend_list' %>
     <% else %>
         <h1>This user has no friends.</h1>
     <% end %></div>
