--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
 <%= render 'layouts/header' %>
 <%= render 'layouts/notifications' %>
-<div class="container">
+<div class="container-fluid">
   <%= render 'layouts/flash' %><%= yield %></div>
 
 </body>
