--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,5 @@
 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"><div id="user-<%= user.id %>" class="user-tile">
-  <%= link_to user.username, user %><br>
+  <%= link_to full_name(user), user %><br>
   <%= user.username %>
   <%= user.email %>
   <%= image_tag user.avatar.url, class: 'img-responsive img-thumbnail' if user.avatar? %>
