--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Home') %>
-<h1>Welcome, <%= render 'shared/full_name', user: current_user %></h1>
+<h1>Welcome, <%= full_name current_user %></h1>
 
 <h1>The Wall</h1>
 
