--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
     <% else %>
         <% if FriendRequest.requested? @current_user, @user %>
             <p>You have already sent frienship request.</p>
-        <% else %>
+        <% elsif current_user != @user %>
             <%= form_for FriendRequest.new do |f| %>
                 <%= hidden_field_tag :from_id, @current_user.id %>
                 <%= hidden_field_tag :to_id, @user.id %>
